--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<span>{{question.home_university}}</span><span>QnA</span>
+<span>{{ question.home_university }}</span><span>QnA</span>
 <h2>{{ question.question_title }}</h2>
-<p>작성자: {{ question.author}} 작성 시간: {{question.created_at}}</p>
-<p>파견교: {{question.away_university}} 파견 국가: {{question.country}}</p>
+<p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
+<p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
 <p>
-{{question.question_content}}
+{{ question.question_content }}
 </p>
 <div>
     <button onclick="location.href='{% url "question:question_delete" question.pk %}'"> 삭제 </button>
@@ -14,6 +14,15 @@
     <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
 </div>
 <button onclick="location.href='{% url "question:comment_create" %}'">답변 달기</button>
+{% for comment in comments %}
+<div>
+    {{ comment.comment_author }}
+    {{ comment.comment_content }}
+    {{ comment.created_at }}
+    <button onclick="location.href='{% url "question:comment_edit" comment.pk%}'"> 수정  </button>
+    <button onclick="location.href='{% url "question:comment_delete" comment.pk%}'"> 삭제</button>
+</div>
 
+{% endfor %}
 
 {% endblock %}
