--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -4,7 +4,7 @@
 <div class="container">
     <h1>Sign up!</h1>
     <form method="POST" action="{% url 'login:signup' %}">
-        {% csrf_token %}
+        <!-- {% csrf_token %}
         Username:
         <br>
         <input name="username" type="text" />
@@ -26,7 +26,10 @@
         <br>
         <input name="password2" type="text" />
         <br><br>
-        <input type="submit" value="sign up" />
+        <input type="submit" value="sign up" /> -->
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="회원가입" />
     </form>
 </div>
 {% endblock %}
