--- a/templates/question/comment_form.html
+++ b/templates/question/comment_form.html
@@ -1,21 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<span>{{ comment.question.home_university }}</span><span>QnA</span>
-<h2>{{ comment.question.question_title }}</h2>
-<p>작성자: {{ comment.question.author}} 작성 시간: {{ comment.question.created_at }}</p>
-<p>파견교: {{ comment.question.away_university }} 파견 국가: {{ comment.question.country }}</p>
-<p>
-{{ comment.question.question_content }}
-</p>
-<div>
-    <button onclick="location.href='{% url "question:question_delete" question.pk %}'"> 삭제 </button>
-    <button onclick="location.href='{% url "question:question_edit" question.pk %}'"> 수정 </button>
-    <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
-</div>
-<button onclick="location.href='{% url "question:comment_create" %}'">답변 달기</button>
+
 <form action ="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     작성자: {{form.comment_author}}
+    글: {{form.question}}
     내용: {{form.comment_content}}
 
     <input type="submit" value="저장하기"/>
