--- a/templates/question/comment_form.html
+++ b/templates/question/comment_form.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-
+<span>{{ question.home_university }}</span><span>QnA</span>
+<h2>{{ question.question_title }}</h2>
+<p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
+<p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
+<p>
+{{ question.question_content }}
+</p>
+<div>
+    <button onclick="location.href='{% url "question:question_delete" question.pk %}'"> 삭제 </button>
+    <button onclick="location.href='{% url "question:question_edit" question.pk %}'"> 수정 </button>
+    <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
+</div>
+<button onclick="location.href='{% url "question:comment_create" question.pk %}'">답변 달기</button>
 <form action ="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     작성자: {{form.comment_author}}
