--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -17,35 +17,38 @@
     {{univ.away_apply}}
     <div><a href="{% url "foreign:wiki_edit_apply" univ.pk %}">수정</a></div>
     <div>
-    <p>
-    2.필요 어학 점수</p>
+    <p>2.필요 어학 점수</p>
     {{univ.language_score}}
     <div><a href="{% url "foreign:wiki_edit_language_score" univ.pk %}">수정</a></div>
 </div>
 <div>
-    <p>
-    3.수강신청방법</p>
+    <p>3.수강신청방법</p>
     {{univ.course_enroll}}
+    <div><a href="{% url "foreign:wiki_edit_course_enroll" univ.pk %}">수정</a></div>
 </div>
 <div>
     <p>
     4.기숙사 정보</p>
     {{univ.accommodation}}
+    <div><a href="{% url "foreign:wiki_edit_accommodation" univ.pk %}">수정</a></div>
 </div>
 <div>
     <p>
     5.학교 분위기</p>
     {{univ.atmosphere}}
+    <div><a href="{% url "foreign:wiki_edit_atmosphere" univ.pk %}">수정</a></div>
 </div>
 <div>
     <p>
     6.동아리</p>
     {{univ.club}}
+    <div><a href="{% url "foreign:wiki_edit_club" univ.pk %}">수정</a></div>
 </div>
 <div>
     <p>
     7.장학금</p>
     {{univ.away_scholarship}}
+    <div><a href="{% url "foreign:wiki_edit_away_scholarship" univ.pk %}">수정</a></div>
 </div>
 </div>
 </body>
