--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -13,7 +13,7 @@
         <br>
         <input name="password" type="password" />
         <br><br>
-        <input type="submit" value="sign up" />
+        <input type="submit" value="로그인" />
     </form>
 </div>
 {% endblock %}
