--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -12,7 +12,7 @@
     <button onclick="location.href='{% url "question:question_edit" question.pk %}'"> 수정 </button>
     <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
 </div>
-<button onclick="location.href='{% url "question:comment_create" question.pk %}'">답변 달기</button>
+<span>답변</span>
 {% for comment in comments %}
     <div>
         {{ comment.comment_author }}
@@ -22,5 +22,6 @@
         <button onclick="location.href='{% url "question:comment_delete" comment.pk%}'"> 삭제</button>
     </div>
 {% endfor %}
+<button onclick="location.href='{% url "question:comment_create" question.pk %}'">답변 달기</button>
 
 {% endblock %}
