--- a/templates/question/question_list.html
+++ b/templates/question/question_list.html
@@ -1,13 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-<span>{{question.home_university}}</span><span>QnA</span>
+<span>(학교 이름 자리){{question.home_university}}</span><span>QnA</span>
 <button onclick="location.href='{% url "question:question_create" %}'"> 글쓰기 </button>
-{%for question in questions %}
-<div>
-    <a href="{% url 'question:question_detail' question.pk%}">{{ question.question_title }}</a>
-    <span>{{ question.created_at}}</span>
+<div class="content_box" >
+    <ul>
+        <li><a href="">자매 결연 대학</a></li>
+        <li><a href="">위키</a></li>
+        <li><a href="">QnA</a></li>
+        <li><a href="">파견교별 학점컷</a></li>
+    </ul>
 </div>
-{% endfor %}
+<table>
+	<th>번호</th>
+	<th>제목</th>
+    <th>날짜</th>
+    {%for question in questions %}
+    <tr>
+        <td class="numbered"></td>
+        <td><a href="{% url 'question:question_detail' question.pk%}">{{ question.question_title }}</a></td>
+        <td>{{ question.created_at}}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% endblock %}
+
+{% block extra %}
+<script>
+    function numbering(startnum){
+        var init = startnum;
+        var td_list = document.querySelectorAll(`.numbered`);
+        for(var i=0; i<td_list.length; i++){
+            init++;
+            td_list[i].innerHTML= `${init}`;
+        }
+    }
+    numbering(0);
+</script>
 
 {% endblock %}
