--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div>
+            <a href="{% url 'login:user_main' %}"><span>홈</span></a>
             {% if not user.is_authenticated %}
             <div>
                 <a href="{% url 'login:signup' %}"><span>회원가입</span></a>
@@ -16,12 +17,16 @@
             </div>
             {% else %}
             <div>
+                <a href="{% url 'login:mypage' %}"><span>마이페이지</span></a>
                 <a href="{% url 'login:logout' %}"><span>로그아웃</span></a>
             </div>
             {% endif %}
         </div>
     </header>
     {% block content %}
+    {% endblock %}
+
+    {% block extra %}
     {% endblock %}
 </body>
 </html>
