--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -9,7 +9,24 @@
             <button onclick="onClickNickname(document.getElementById('nickname').value)">닉네임 수정</button>
         </div>
         <div id="repassword">
-            <form action=""></form>
+            <span>비밀번호 변경</span>
+            <br />
+            <form method="POST">
+                {% csrf_token %}
+                <div>
+                    <span>기존 비밀번호 :</span>
+                    <input name="origin_password" type="password" />
+                </div>
+                <div>
+                    <span>새로운 비밀번호 :</span>
+                    <input name="password1" type="password" />
+                </div>
+                <div>
+                    <span>비밀번호 확인 :</span>
+                    <input name="password2" type="password" />
+                </div>
+                <input type="submit" value="비밀번호 변경" />
+            </form>
         </div>
         <div id="school-certificate">
             <span>학교 인증 : </span>
