TEST-3 Design: QnA 리스트 페이지 정렬

--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<span>{{ question.home_university }}</span><span>QnA</span>
+<h1>{{ question.home_university }}</h1><span>QnA</span>
 <h2>{{ question.question_title }}</h2>
 <p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
 <p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
