--- a/templates/question/comment_form.html
+++ b/templates/question/comment_form.html
@@ -1,31 +1,63 @@
 {% extends "base.html" %}
 {% block content %}
-<span>{{ question.home_university }}</span><span>QnA</span>
-<h2>{{ question.question_title }}</h2>
-<p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
-<p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
-<p>
-{{ question.question_content }}
-</p>
-<div>
-    <button onclick="location.href='{% url "question:question_delete" question.pk %}'"> 삭제 </button>
-    <button onclick="location.href='{% url "question:question_edit" question.pk %}'"> 수정 </button>
-    <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
-</div>
-<span>답변</span>
-{% for comment in question.comment_set.all %}
-    <div>
-        {{ comment.comment_author }}
-        {{ comment.comment_content }}
-        {{ comment.created_at }}
-        <button onclick="location.href='{% url "question:comment_edit" comment.pk%}'"> 수정  </button>
-        <button onclick="location.href='{% url "question:comment_delete" comment.pk%}'"> 삭제</button>
+<div class="d-flex justify-content-evenly ">
+    <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
+        <ul>
+            <li><a href="">자매 결연 대학</a></li>
+            <li><a href="">위키</a></li>
+            <li><a href="">QnA</a></li>
+            <li><a href="">파견교별 학점컷</a></li>
+        </ul>
     </div>
-{% endfor %}
-<button onclick="location.href='{% url "question:comment_create" question.pk %}'">답변 달기</button>
-<form action ="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="저장하기"/>
-</form>
+    <div style="width:750px;">
+        <div class="d-flex justify-content-between ">
+            <div class="d-flex align-items-center ">
+                <h1>{{question.home_university}}</h1>
+                <span>QnA</span>
+            </div>
+            <button class="btn btn-sm btn-border" onclick="location.href='{% url "question:question_create" %}'"> 글쓰기 </button>
+        </div>
+        <hr>
+        <div>
+            <div class="d-flex justify-content-between">
+                <h4>{{ question.question_title }}</h4>
+                <p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
+            </div>
+            <p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
+            <p>
+            {{ question.question_content }}
+            </p>
+            <div class="d-flex justify-content-end">
+                <button onclick="location.href='{% url "question:question_delete" question.pk %}'"> 삭제 </button>
+                <button onclick="location.href='{% url "question:question_edit" question.pk %}'"> 수정 </button>
+                <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-between">
+                <h4>답변</h4>
+                <button onclick="location.href='{% url "question:comment_create" question.pk %}'">답변 달기</button>
+            </div>
+            {% for comment in question.comment_set.all %}
+                <div class="d-flex justify-content-between">
+                    <div>
+                        {{ comment.comment_author }}
+                        {{ comment.comment_content }}
+                        {{ comment.created_at }}
+                    </div>
+                    <div>
+                        <button onclick="location.href='{% url "question:comment_edit" comment.pk%}'"> 수정  </button>
+                        <button onclick="location.href='{% url "question:comment_delete" comment.pk%}'"> 삭제</button>
+                    </div>
+                </div>
+            {% endfor %}
+            <hr>
+            <form action ="" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="저장하기"/>
+            </form>
+            </div>
+    </div>
+</div>
+
 {% endblock %}
