--- a/templates/question/question_form.html
+++ b/templates/question/question_form.html
@@ -1,8 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-<form action ="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="저장하기"/>
-</form>
+<div class="d-flex justify-content-evenly ">
+    <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
+        <ul>
+            <li><a href="">자매 결연 대학</a></li>
+            <li><a href="">위키</a></li>
+            <li><a href="">QnA</a></li>
+            <li><a href="">파견교별 학점컷</a></li>
+        </ul>
+    </div>
+    <div style="width:750px;">
+        <div class="d-flex justify-content-between ">
+            <div class="d-flex align-items-center ">
+                <h1>(학교 이름 자리){{question.home_university}}</h1>
+                <span>QnA</span>
+            </div>
+            <button class="btn btn-sm btn-border" onclick="location.href='{% url "question:question_create" %}'"> 글쓰기 </button>
+        </div>
+        <hr>
+        <form action ="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{form.as_p}}
+            <div class="d-flex justify-content-end"><input type="submit" value="저장하기"/></div>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
