--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -1,55 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{%extends "foreign/foreign_base.html"%}
+{%block content%}
     <div>
-    {{univ.away_name}}
-    
-</div>
-<div>
-    <div>
-    <p>1.파견로의 지원방법</p>
-    {{univ.away_apply}}
-    <div><a href="{% url "foreign:wiki_edit_apply" univ.pk %}">수정</a></div>
-    <div>
-    <p>2.필요 어학 점수</p>
-    {{univ.language_score}}
-    <div><a href="{% url "foreign:wiki_edit_language_score" univ.pk %}">수정</a></div>
-</div>
-<div>
-    <p>3.수강신청방법</p>
-    {{univ.course_enroll}}
-    <div><a href="{% url "foreign:wiki_edit_course_enroll" univ.pk %}">수정</a></div>
-</div>
-<div>
-    <p>
-    4.기숙사 정보</p>
-    {{univ.accommodation}}
-    <div><a href="{% url "foreign:wiki_edit_accommodation" univ.pk %}">수정</a></div>
-</div>
-<div>
-    <p>
-    5.학교 분위기</p>
-    {{univ.atmosphere}}
-    <div><a href="{% url "foreign:wiki_edit_atmosphere" univ.pk %}">수정</a></div>
-</div>
-<div>
-    <p>
-    6.동아리</p>
-    {{univ.club}}
-    <div><a href="{% url "foreign:wiki_edit_club" univ.pk %}">수정</a></div>
-</div>
-<div>
-    <p>
-    7.장학금</p>
-    {{univ.away_scholarship}}
-    <div><a href="{% url "foreign:wiki_edit_away_scholarship" univ.pk %}">수정</a></div>
-</div>
-</div>
-</body>
-</html>
+        <div>
+            <p>1.파견로의 지원방법</p>
+            <pre>{{univ.away_apply}}</pre>                              <!--textarea에 입력한대로 보여주는 pre tag-->
+            <div><a href="{% url "foreign:wiki_edit_apply" univ.pk %}">수정</a></div>
+            <div>
+                <p>2.필요 어학 점수</p>
+                <pre>{{univ.language_score}}</pre>
+                <div><a href="{% url "foreign:wiki_edit_language_score" univ.pk %}">수정</a></div>
+            </div>
+            <div>
+                <p>3.수강신청방법</p>
+                <pre>{{univ.course_enroll}}</pre>
+                <div><a href="{% url "foreign:wiki_edit_course_enroll" univ.pk %}">수정</a></div>
+            </div>
+            <div>
+                <p>4.기숙사 정보</p>
+                <pre>{{univ.accommodation}}</pre>
+                <div><a href="{% url "foreign:wiki_edit_accommodation" univ.pk %}">수정</a></div>
+            </div>
+            <div>
+                <p>5.학교 분위기</p>
+                <pre>{{univ.atmosphere}}</pre>
+                <div><a href="{% url "foreign:wiki_edit_atmosphere" univ.pk %}">수정</a></div>
+            </div>
+            <div>
+                <p>6.동아리</p>
+                <pre>{{univ.club}}</pre>
+                <div><a href="{% url "foreign:wiki_edit_club" univ.pk %}">수정</a></div>
+            </div>
+            <div>
+                <p>7.장학금</p>
+                <pre>{{univ.away_scholarship}}</pre>
+                <div><a href="{% url "foreign:wiki_edit_away_scholarship" univ.pk %}">수정</a></div>
+            </div>
+        </div>
+    </div>
+
+{%endblock%}
