--- a/templates/base.html
+++ b/templates/base.html
@@ -5,20 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <div>
-            <a href="{% url 'login:user_main' %}"><span>홈</span></a>
+        <div class="d-flex">
+            <a href="{% url 'login:user_main' %}" class="col-2 btn text-center"><span>홈</span></a>
+            <div class="d-flex flex-row-reverse col-7">
+                <div>
+                    <a class="btn" href="">국내대학별</a>
+                </div>
+                <div>
+                    <a class="btn" href="">해외파견교별</a>
+                </div>
+                <div>
+                    <a class="btn" href="">파견국가별</a>
+                </div>
+            </div>
             {% if not user.is_authenticated %}
-            <div>
-                <a href="{% url 'login:signup' %}"><span>회원가입</span></a>
-                <a href="{% url 'login:login' %}?next={{ request.path }}"><span>로그인</span></a>
+            <div class="col-3 d-flex justify-content-center">
+                <a class="btn" href="{% url 'login:signup' %}"><span>회원가입</span></a>
+                <a class="btn" href="{% url 'login:login' %}?next={{ request.path }}"><span>로그인</span></a>
             </div>
             {% else %}
-            <div>
-                <a href="{% url 'login:mypage' %}"><span>마이페이지</span></a>
-                <a href="{% url 'login:logout' %}"><span>로그아웃</span></a>
+            <div class="col-3 d-flex justify-content-center">
+                <a class="btn" href="{% url 'login:mypage' %}"><span>마이페이지</span></a>
+                <a class="btn" href="{% url 'login:logout' %}"><span>로그아웃</span></a>
             </div>
             {% endif %}
         </div>
