--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -1,41 +1,47 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
+    <div class="container ml-5 mt-4">
         <h2>내 정보 수정</h2>
-        <div id="rename">
-            <span>닉네임 :</span>
-            <input id="nickname" type="text" value="{{ user.nickname }}">
-            <button onclick="onClickNickname(document.getElementById('nickname').value)">닉네임 수정</button>
-        </div>
-        <div id="repassword">
-            <span>비밀번호 변경</span>
+        <hr />
+        <div class="d-flex flex-column">
+            <div id="rename">
+                <span>닉네임 :</span>
+                <input id="nickname" type="text" value="{{ user.nickname }}">
+                <button class="btn btn-sm btn-primary" onclick="onClickNickname(document.getElementById('nickname').value)">닉네임 수정</button>
+            </div>
             <br />
-            <form method="POST">
-                {% csrf_token %}
-                <div>
-                    <span>기존 비밀번호 :</span>
-                    <input name="origin_password" type="password" />
-                </div>
-                <div>
-                    <span>새로운 비밀번호 :</span>
-                    <input name="password1" type="password" />
-                </div>
-                <div>
-                    <span>비밀번호 확인 :</span>
-                    <input name="password2" type="password" />
-                </div>
-                <input type="submit" value="비밀번호 변경" />
-            </form>
+            <div id="repassword">
+                <h5>비밀번호 변경</h5>
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="mt-2">
+                        <span>기존 비밀번호 :</span>
+                        <input name="origin_password" type="password" />
+                    </div>
+                    <div class="mt-2">
+                        <span>새로운 비밀번호 :</span>
+                        <input name="password1" type="password" />
+                    </div>
+                    <div class="mt-2">
+                        <span>비밀번호 확인 :</span>
+                        <input name="password2" type="password" />
+                    </div>
+                    <input class="mt-2 btn btn-primary btn-sm" type="submit" value="비밀번호 변경" />
+                </form>
+            </div>
+            <br />
+            <div id="school-certificate">
+                <span>학교 인증 : </span>
+                {% if user.school_certificate == 0 %}
+                <span>학교 인증이 필요합니다.</span>
+                <a class="btn btn-sm btn-primary" href="{% url 'login:certificate' %}">학교 인증하러 가기</a>
+                {% else %}
+                <span>학교 인증이 완료되었습니다!</span>
+                {% endif %}
+            </div>
         </div>
-        <div id="school-certificate">
-            <span>학교 인증 : </span>
-            {% if user.school_certificate == 0 %}
-            <span>학교 인증이 필요합니다.</span>
-            {% else %}
-            <span>학교 인증이 완료되었습니다!</span>
-            {% endif %}
-        </div>
+        
     </div>
 {% endblock %}
 
