--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -14,8 +14,8 @@
 <p>파견학기: {{review.away_year}}-{{review.away_semester}}</p>
 <p>날짜: {{review.created_at}}</p>
 {% if request.user == review.post_author %}
-<a href="{% url "foreign:review_delete" review.pk%}">삭제</a>
-<a href="{% url "foreign:review_update" review.pk%}">수정</a>
+<a href="{% url "foreign:review_delete" foreign_id review.pk%}">삭제</a>
+<a href="{% url "foreign:review_update" foreign_id review.pk%}">수정</a>
 {% endif %}
 </body>
 </html>
