--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -17,7 +17,7 @@
         <form action="" method="POST" enctype="multipart/form-data" class="table">
             {% csrf_token %}
             {% for field in form %}
-
+            {% if btn == forloop.counter%}
             {%if field.name == 'away_apply'%} <p>1.파견로의 지원방법</p>  {%endif%}
             {%if field.name == 'language_score'%}<p>2.필요 어학 점수</p>   {%endif%}
             {%if field.name == 'course_enroll'%} <p>3.수강신청방법</p>  {%endif%}
@@ -26,7 +26,7 @@
             {%if field.name == 'club'%}  <p>6.동아리</p> {%endif%}
             {%if field.name == 'away_scholarship'%} <p>7.장학금</p> {%endif%}
             
-            {% if btn == forloop.counter%}
+            
             <div class="form-group">
                 <textarea type="{{ field.field.widget.textarea_type }}" class="form-control"
                     id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" 	cols = "100" rows="20" >{{field.value}}</textarea>
@@ -35,7 +35,7 @@
             {% else %}
             <div class="form-group">
                 <textarea type="{{ field.field.widget.textarea_type }}" class="form-control "
-                    id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" readonly cols = "100" rows="20" >{{field.value}}</textarea>
+                    id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" readonly style="display:none" cols = "100" rows="20" >{{field.value}}</textarea>
             </div>
           
             {%endif%}
