--- a/templates/foreign/review_create.html
+++ b/templates/foreign/review_create.html
@@ -1,11 +1,5 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-    </head>
-    <body>
+{%extends "foreign/foreign_base.html"%}
+{%block content%}
         <div class="container">
             <div class="col-sm-12">
                 <form action="" method="post" enctype="multipart/form-data" >
@@ -19,5 +13,4 @@
                 </form>
             </div>
         </div>
-    </body>
-</html> 
+{%endblock%}
