--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
+{%extends "foreign/foreign_base.html"%}
+{%block content%}
 <p>작성자:{{review.post_author}}</p>
 <p>제목: {{review.title}}</p>
 <p>내용: {{review.content}}</p>
@@ -17,5 +9,4 @@
 <a href="{% url "foreign:review_delete" foreign_id review.pk%}">삭제</a>
 <a href="{% url "foreign:review_update" foreign_id review.pk%}">수정</a>
 {% endif %}
-</body>
-</html>
+{%endblock%}
