--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <div>
-    </div>
+{%extends "foreign/foreign_base.html"%}
+{%block content%}
     <div>
 
 
@@ -44,6 +33,4 @@
         </form>
 
     </div>
-</body>
-
-</html>
+{%endblock%}
