TEST-13 Feat: 국내 대학 총 뷰 틀, 템플릿 틀

--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -1,3 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="d-flex justify-content-evenly ">
+    <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
+        <ul>
+            <li><a href="{% url 'domestic:sister_list' %}">자매 결연 대학</a></li>
+            <li><a href="{% url 'domestic:wiki' %}">위키</a></li>
+            <li><a href="{% url 'domestic:question_list' %}">QnA</a></li>
+            <li><a href="{% url 'domestic:credit_list' %}">파견교별 학점컷</a></li>
+        </ul>
+    </div>
+    <div style="width:750px;">
+        <div class="d-flex justify-content-between ">
+            <div class="d-flex align-items-center ">
+                <h1>{{question.home_university}}</h1>
+                <span>QnA</span>
+            </div>
+      
+    </div>
+</div>
 {% endblock %}
