--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -3,10 +3,10 @@
 <div class="d-flex justify-content-evenly ">
     <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
         <ul>
-            <li><a href="">자매 결연 대학</a></li>
-            <li><a href="">위키</a></li>
-            <li><a href="">QnA</a></li>
-            <li><a href="">파견교별 학점컷</a></li>
+            <li><a href="{% url 'domestic:sister_list' %}">자매 결연 대학</a></li>
+            <li><a href="{% url 'domestic:wiki' %}">위키</a></li>
+            <li><a href="{% url 'domestic:question_list' %}">QnA</a></li>
+            <li><a href="{% url 'domestic:credit_list' %}">파견교별 학점컷</a></li>
         </ul>
     </div>
     <div style="width:750px;">
