--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -9,4 +9,52 @@
 <a href="{% url "foreign:review_delete" foreign_id review.pk%}">삭제</a>
 <a href="{% url "foreign:review_update" foreign_id review.pk%}">수정</a>
 {% endif %}
+<hr>
+<p>댓글</p>
+<div class="post_{{review.id}}">
+{%if all_comment %}
+{%for comment in all_comment %}
+<div class="comment_{{comment.id}} d-flex justify-content-between">
+    {{comment.comment_content}}<div class="btn btn-outline-secondary delete" onclick="onClickDelete({{comment.id}} )">삭제
+    </div>
+</div>
+{%endfor%}
+{%endif%}
+</div>
+
+<form action="./comment_create/" method="POST">
+    {% csrf_token %}
+    <input type="text" name="comment_content" id="comment_{{review.id}}" value='댓글달기...' style="width: 80%;"/>
+    <div class="btn btn-outline-dark submit" onclick="onClickComment({{review.id}}, document.querySelector('#comment_{{review.id}}').value)">
+        submit
+    </div>
+</form>
+
+<script>
+        const onClickComment= async(post_id, comment_content) => {  
+        const url = './comment_create/';
+        const res= await fetch(url,{        
+            method: 'POST',
+            headers:{
+            'Content-Type': 'application/x-www-form-urlencoded'
+            },
+            body: JSON.stringify({post_id:post_id,comment_content:comment_content})
+        }); 
+        const {post_id:id,comment_content:content}= await res.json();        
+        commentHandleResponse(id,content);
+    };
+
+    const commentHandleResponse=(post_id,comment_content,comment_id)=>{
+    
+        const element=document.querySelector(`.post_${post_id}`)
+        const newDiv = document.createElement('div')
+        newDiv.className = `comment_${comment_id} d-flex justify-content-between`;
+        newDiv.innerHTML = `${comment_content}<div class="btn btn-outline-secondary delete" onclick="onClickDelete(${comment_id} )">삭제</div>`
+        element.appendChild(newDiv)
+        //댓글 입력창 비워주기
+        const input_content = document.querySelector(`#comment_${post_id}`)
+        input_content.value = null
+    }
+
+</script>
 {%endblock%}
