--- a/templates/login/certificate.html
+++ b/templates/login/certificate.html
@@ -6,7 +6,7 @@
     <hr />
     <div class="search-form">
         <span>학교명 :</span>
-        <select name="school_list" id="school_list">
+        <select name="school_list" id="school_list" name="school_list">
             {% for school_name in school_names %}
                 <option>{{ school_name }}</option>
             {% endfor %}
@@ -14,7 +14,11 @@
         <!-- <input type="text" class="search_uni" placeholder="학교 이름"> -->
         <button class="btn btn-sm btn-primary" onclick="onClickSchool(document.querySelector('#school_list').value)">학교 검색</button>
     </div>
-    <div class="domain mt-2"></div>
+    <form class="mt-2" method="POST">
+        {% csrf_token %}
+        <div class="domain mt-2">
+    </form>
+    </div>
 </div>
 {% endblock %}
 
@@ -35,13 +39,15 @@
             const originHTML = element.innerHTML;
             
             element.innerHTML = `
-            <span>@${school_domain}</span>
+            <span name="school_domain">@${school_domain}</span>
             <span>라는 도메인이 들어가는 메일 주소를 적어주세요.</span>
             <div class='mt-1'>
-                <input type='email' />
+                <input type="email" name="email" />
+                <input class="mt-2 btn btn-primary btn-sm mailing" type="submit" value="인증 메일 보내기"></input>
             </div>
             `
         };
+
     </script>
 <!-- <script>
     //학교 이름 뜨게 하기
