TEST-8 Feat: QnA question 구현

--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -1,5 +1,14 @@
 {%extends "foreign/foreign_base.html"%}
 {%block content%}
+<div style="width:750px;">
+    <div class="d-flex justify-content-between ">
+        <div class="d-flex align-items-center ">
+            <h1>{{univ.away_name}}</h1>
+            <span>위키</span>
+            <h3>{{univ.country}}</h3>
+        </div>
+    </div>
+
     <div>
         <div>
             <p>1.파견로의 지원방법</p>
@@ -37,5 +46,6 @@
             </div>
         </div>
     </div>
+</div>
 
 {%endblock%}
