--- a/templates/foreign/foreign_base.html
+++ b/templates/foreign/foreign_base.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>{{univ.away_name}}</h1>
-    위키
-    <h3>{{univ.country}}</h3>
-    <hr/>
+    <div class="d-flex justify-content-evenly ">
+        <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center"
+            style="width:200px; height:150px;">
+            <ul>
+                <li><a href="">자매 결연 대학</a></li>
+                <li><a href="{% url "foreign:wiki" univ.pk%}">위키</a></li>
+                <li><a href="{% url "foreign:question_list" univ.pk%}">QnA</a></li>
+                <li><a href="{% url "foreign:review_list" univ.pk%}">파견교 후기 공유</a></li>
+            </ul>
+        </div>
+        <div style="width:750px;">
+            
     {% block content %}
     {% endblock %}
+        </div>
+    </div>
+
+
 
 </body>
+
 </html>
