--- a/templates/foreign/review_create.html
+++ b/templates/foreign/review_create.html
@@ -1,8 +1,19 @@
 {%extends "foreign/foreign_base.html"%}
 {%block content%}
+<div style="width:750px;">
+    <div class="d-flex justify-content-between ">
+        <div class="d-flex align-items-center ">
+            <h1>{{univ.away_name}}</h1>
+            <span>파견교 후기 공유</span>
+            <h3>{{univ.country}}</h3>
+        </div>
+        </div>
+        <h1>{{univ.away_name}}</h1>
+        <span>wiki</span>
+        <h3>{{univ.country}}</h3>
         <div class="container">
             <div class="col-sm-12">
-                <form action="" method="post" enctype="multipart/form-data" >
+                <form action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <table class="table table-bordered">
                         {% if request.user == review.post_author or type == 'create' %}
@@ -13,4 +24,6 @@
                 </form>
             </div>
         </div>
+
+</div>
 {%endblock%}
