--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -1,5 +1,13 @@
 {%extends "foreign/foreign_base.html"%}
 {%block content%}
+<div style="width:750px;">
+    <div class="d-flex justify-content-between ">
+        <div class="d-flex align-items-center ">
+            <h1>{{univ.away_name}}</h1>
+            <span>파견교 후기 공유</span>
+            <h3>{{univ.country}}</h3>
+        </div>
+</div>
 <p>작성자:{{review.post_author}}</p>
 <p>제목: {{review.title}}</p>
 <p>내용: {{review.content}}</p>
@@ -9,6 +17,7 @@
 <a href="{% url "foreign:review_delete" foreign_id review.pk%}">삭제</a>
 <a href="{% url "foreign:review_update" foreign_id review.pk%}">수정</a>
 {% endif %}
+<a href="{% url "foreign:review_list" foreign_id %}">목록</a>
 <hr>
 <p>댓글</p>
 <div class="post_{{review.id}}">
@@ -29,6 +38,7 @@
         submit
     </div>
 </form>
+</div>
 
 <script>
         const onClickComment= async(post_id, comment_content) => {  
