--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -1,12 +1,25 @@
 {%extends "foreign/foreign_base.html"%}
 {%block content%}
-    <div><a href="{% url "foreign:review_create" foreign_id%}">글쓰기</a></div>
-    {% for review in all_review %}
-    <div>
-    {{forloop.counter}}     <!--for문이 돌은 횟수 -->
-    <a href="{% url "foreign:review_detail" foreign_id review.pk %}">{{review.title}}</a>
-    {{review.away_year}}-{{review.away_semester}}
-    {{review.created_at}}
-    {% endfor %}
-    </div>
+<div style="width:750px;">
+    <div class="d-flex justify-content-between ">
+        <div class="d-flex align-items-center ">
+            <h1>{{univ.away_name}}</h1>
+            <span>파견교 후기 공유</span>
+            <h3>{{univ.country}}</h3>
+        </div>
+        <div><a href="{% url "foreign:review_create" foreign_id%}">글쓰기</a></div>
+        </div>
+        <hr>
+        {% for review in all_review %}
+        
+        <div>
+            {{forloop.counter}}
+            <!--for문이 돌은 횟수 -->
+            <a href="{% url "foreign:review_detail" foreign_id review.pk %}">{{review.title}}</a>
+            {{review.away_year}}-{{review.away_semester}}
+            {{review.created_at}}
+            {% endfor %}
+        </div>
+
+</div>
 {%endblock%}
