--- a/templates/foreign/comment_form.html
+++ b/templates/foreign/comment_form.html
@@ -1,21 +1,14 @@
-{% extends "base.html" %}
+{% extends "foreign/foreign_base.html" %}
 {% block content %}
-<div class="d-flex justify-content-evenly ">
-    <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
-        <ul>
-            <li><a href="">자매 결연 대학</a></li>
-            <li><a href="">위키</a></li>
-            <li><a href="">QnA</a></li>
-            <li><a href="">파견교별 학점컷</a></li>
-        </ul>
-    </div>
+
+   
     <div style="width:750px;">
         <div class="d-flex justify-content-between ">
             <div class="d-flex align-items-center ">
                 <h1>{{question.home_university}}</h1>
                 <span>QnA</span>
             </div>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "question:question_create" %}'"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="location.href='{% url "foreign:question_create" foreign_id %}'"> 글쓰기 </button>
         </div>
         <hr>
         <div>
@@ -28,14 +21,14 @@
             {{ question.question_content }}
             </p>
             <div class="d-flex justify-content-end">
-                <button onclick="location.href='{% url "question:question_delete" question.pk %}'"> 삭제 </button>
-                <button onclick="location.href='{% url "question:question_edit" question.pk %}'"> 수정 </button>
-                <button onclick="location.href='{% url "question:question_list" %}'"> 목록 </button>
+                <button onclick="location.href='{% url "foreign:question_delete" foreign_id question.pk %}'"> 삭제 </button>
+                <button onclick="location.href='{% url "foreign:question_edit" foreign_id question.pk %}'"> 수정 </button>
+                <button onclick="location.href='{% url "foreign:question_list" foreign_id %}'"> 목록 </button>
             </div>
             <hr>
             <div class="d-flex justify-content-between">
                 <h4>답변</h4>
-                <button onclick="location.href='{% url "question:comment_create" question.pk %}'">답변 달기</button>
+                <button onclick="location.href='{% url "foreign:q_comment_create" foreign_id question.pk %}'">답변 달기</button>
             </div>
             {% for comment in question.comment_set.all %}
                 <div class="d-flex justify-content-between">
@@ -46,8 +39,8 @@
                     </div>
                     <div>
                         {{ comment.created_at }}
-                        <button onclick="location.href='{% url "question:comment_edit" comment.pk%}'"> 수정  </button>
-                        <button onclick="location.href='{% url "question:comment_delete" comment.pk%}'"> 삭제</button>
+                        <button onclick="location.href='{% url "foreign:q_comment_edit" foreign_id comment.pk%}'"> 수정  </button>
+                        <button onclick="location.href='{% url "foreign:q_comment_delete" foreign_id comment.pk%}'"> 삭제</button>
                     </div>
                 </div>
             {% endfor %}
@@ -59,6 +52,6 @@
             </form>
             </div>
     </div>
-</div>
+
 
 {% endblock %}
