--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container ml-5 mt-4">
+    <div class="container ml-5 mt-4 w-75">
         <h2>내 정보 수정</h2>
         <hr />
         <div class="d-flex flex-column">
