--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container ml-5 mt-4">
+<div class="container ml-5 mt-4 w-75">
     <h3>회원가입</h3>
     <p>회원가입 페이지입니다.</p>
     <hr />
