TEST-6 Fix: country_list 수정, Feat: univ, qna 등 detail view, template 생성

--- a/templates/country/country_list.html
+++ b/templates/country/country_list.html
@@ -7,9 +7,9 @@
     <ul>
         <h3>{{ key }}</h3>
         {% for country in val %}
-            <li>
-                {{ country }}
-            </li>
+            <li><a href="{% url 'country:country_wiki' pk=country.pk %}">
+                {{ country.country_name }}
+            </a></li>
         {% endfor %}
     </ul>
     <br>
