TEST-16 Fix: 국내 대학 목록 완료, 위키 디자인 수정
정연 언니 코드 복붙 및 수정_ pk값 넘겨 줄 수 있는 목록

--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-
-    {% for key, value in universities_dic.items %}
+    {% for key, val in universities_dict.items %}
     <ul>
-        <h4>{{ key }}</h4>
-        {% for university in value %}
-              {{ university }}
+        <h3>{{ key }}</h3>
+        {% for university in val %}
+            <a href="{% url "domestic:wiki" university.pk %}">{{university.home_name}}</a>
         {% endfor %}
     </ul>
+    <br>
     {% endfor %}
-
 {% endblock %}
