TEST-23 Fix: 국내 대학 DB 객체 저장 후 목록, 위키, QnA 연결
DB 객체 저장 후 생긴 오류 해결

--- a/templates/domestic/credit_list.html
+++ b/templates/domestic/credit_list.html
@@ -12,7 +12,7 @@
     <div style="width:750px;">
         <div class="d-flex justify-content-between ">
             <div class="d-flex align-items-center ">
-                <h1>{{question.home_university}}</h1>
+                <h1>{{ domestic.home_name }}</h1>
                 <span>QnA</span>
             </div>
             <button class="btn btn-sm btn-border" onclick="location.href='{% url "question:question_create" %}'"> 글쓰기 </button>
