--- a/templates/domestic/wiki.html
+++ b/templates/domestic/wiki.html
@@ -10,6 +10,13 @@
         </ul>
     </div>
     <div style="width:750px;">
+        <div class="d-flex justify-content-between ">
+            <div class="d-flex align-items-center ">
+                <h1>{{ univ.home_name }}</h1>
+                <span>Wiki</span>
+            </div>
+        </div>
+        <hr>
         <div>
             <p>1. 지원 방법</p>
             <pre>{{univ.home_apply}}</pre>                              <!--textarea에 입력한대로 보여주는 pre tag-->
