TEST-26 Feat : 대학 검색 기능

--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -1,8 +1,8 @@
 {%extends "base.html"%}
 {%block content%}
 
-<form action="{% url "foreign:search_univ" %}" method='GET'>
-    학교명: <input type="search" name='query'>
+<form action="" method='GET'>
+    학교명: <input type="search" name='query' >
     <input type="submit" value='검색'>
 </form>
 
