TEST-22 Feat: 도메인이 같을 시에만 이메일 전송 구현

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <header>
         <div class="d-flex">
             <a href="{% url 'login:user_main' %}" class="col-2 btn text-center"><span>홈</span></a>
-            <div class="d-flex flex-row-reverse col-7">
+            <div class="d-flex justify-content-end col-7">
                 <div>
                     <a class="btn" href="">국내대학별</a>
                 </div>
