TEST-13 비밀번호 변경시 완료 팝업

--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -69,4 +69,7 @@
 
         
     </script>
+    {% if alert_flag %}
+        <script>alert("비밀번호 변경이 완료되었습니다.")</script>  
+    {% endif %}
 {% endblock %}
