--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -7,7 +7,51 @@
     <hr />
     <form method="POST" action="{% url 'login:signup' %}">
         {% csrf_token %}
-        {{ form.as_p }}
+        <p>
+            <label for="id_username">아이디:</label>
+            <input type="text" name="username" max="30" autofocus required id="id_username" />
+            <span class="helptext">필수입력. 문자, 숫자 혹은 특수문자(@/./+/-/_)를 포함한 30자 이하.</span>
+        </p>
+        {% if username_error %}
+            <span>이미 사용 중인 아이디입니다.</span>
+        {% endif %}
+        <p>
+            <label for="id_nickname">닉네임:</label>
+            <input type="text" name="nickname" maxlength="20" required id="id_nickname">
+        </p>
+        {% if nickname_error %}
+            <span>이미 사용 중인 닉네임입니다.</span>
+        {% endif %}
+        <p>
+            <label for="id_email">이메일:</label>
+            <input type="email" name="email" maxlength="100" required id="id_email" />
+        </p>
+        {% if email_error %}
+            <span>이미 사용 중인 이메일입니다.</span>
+        {% endif %}
+        <p>
+            <label for="id_password1">비밀번호:</label>
+            <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
+        </p>
+        <ul>
+            <li>
+                <span>생일, 전화번호, 아이디가 포함된 쉬운 비밀번호는 사용하지 마세요.</span> 
+            </li>
+            <li>
+                <span>문자, 숫자를 조합한 최소 8자 이상 작성해주세요.</span> 
+            </li>
+            <li>
+                <span>다른 사이트에서 사용하는 것과 동일한 비밀번호는 사용하지 마세요.</span> 
+            </li>
+        </ul>
+        <p>
+            <label for="id_password2">비밀번호 확인:</label>
+            <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
+            <span class="helptext">비밀번호 확인을 위해 다시 한 번 입력해주세요.</span>
+        </p>
+        {% if password_error %}
+            <p>입력한 비밀번호가 일치하지 않습니다.</p>
+        {% endif %}
         <input class="btn btn-primary" type="submit" value="회원가입" />
     </form>
 </div>
